multizone player groups generated by multizone-audio

--- a/packages/ballroom/media.yaml
+++ b/packages/ballroom/media.yaml
@@ -8,3 +8,9 @@ media_player:
     name: ballroom_kodi
     host: ballroom.home.whalebarn.com
     port: 8080
+
+group:
+  ballroom_multizone_audio_players:
+    entities:
+      - media_player.ballroom_mpd
+      - media_player.ballroom_kodi
