--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -117,9 +117,12 @@ views:
                   entity: switch.bedroom_mark_demand
                   icon: mdi:fire
 
-          - name: "Mark's Bedroom"
-            type: media-control
-            entity: media_player.bedroom_mark
+          - type: entities
+            entities:
+              - entity: media_player.bedroom_mark_mpd
+                name: Iris
+                icon: mdi:music
+
 
   - title: "Olga's Bedroom"
     icon: mdi:bed
@@ -263,9 +266,16 @@ views:
             - name: Manual Heat
               entity: switch.study_demand
               icon: mdi:fire
-      - name: Study Media
-        type: media-control
-        entity: media_player.study
+      - type: entities
+        entities:
+          - entity: media_player.study_mpd
+            name: Iris
+            icon: mdi:music
+          - type: divider
+          - entity: media_player.study_kodi
+            name: Kodi
+            icon: mdi:kodi
+
 
   - title: Kitchen
     icon: mdi:stove
@@ -302,9 +312,15 @@ views:
               entity: switch.kitchen_demand
               icon: mdi:fire
 
-      - name: "Kitchen Amplifier"
-        type: media-control
-        entity: media_player.outside_amplifier_zone_2
+      - type: entities
+        entities:
+          - entity: media_player.kitchen_mpd
+            name: Iris
+            icon: mdi:music
+          - type: divider
+          - entity: media_player.outside_amplifier_zone_2
+            name: Amplifier
+            icon: mdi:amplifier
 
   - title: Hall
     icon: mdi:fullscreen-exit
@@ -378,9 +394,17 @@ views:
           - entity: sensor.oil_annex_days_remaining
             name: "Annex Oil Days Remaining"
 
-      - name: Outside Amplifier
-        type: media-control
-        entity: media_player.outside_amplifier
+      - type: entities
+        title: Outside Media
+        entities:
+          - entity: media_player.outside_mpd
+            name: Iris
+            icon: mdi:music
+          - type: divider
+          - entity: media_player.outside_amplifier
+            name: Amplifier
+            icon: mdi:amplifier
+
 
   - title: Lounge
     icon: mdi:sofa
@@ -410,9 +434,16 @@ views:
               entity: switch.lounge_demand
               icon: mdi:fire
 
-      - name: Lounge Media
-        type: media-control
-        entity: media_player.lounge
+      - type: entities
+        entities:
+          - entity: media_player.lounge_mpd
+            name: Iris
+            icon: mdi:music
+          - type: divider
+          - entity: media_player.lounge_kodi
+            name: Kodi
+            icon: mdi:kodi
+
 
   - title: Library
     icon: mdi:library
@@ -440,9 +471,12 @@ views:
               entity: switch.library_demand
               icon: mdi:fire
 
-      - name: Library Media
-        type: media-control
-        entity: media_player.library
+      - type: entities
+        entities:
+          - entity: media_player.library_mpd
+            name: Iris
+            icon: mdi:music
+
 
   - title: Ballroom
     icon: mdi:projector
@@ -472,12 +506,19 @@ views:
               entity: switch.ballroom_demand
               icon: mdi:fire
 
-      - name: Ballroom Media
-        type: media-control
-        entity: media_player.ballroom
-      - name: Ballroom Amplifier
-        type: media-control
-        entity: media_player.ballroom_amplifier
+      - type: entities
+        entities:
+          - entity: media_player.ballroom_mpd
+            name: Iris
+            icon: mdi:music
+          - type: divider
+          - entity: media_player.ballroom_kodi
+            name: Kodi
+            icon: mdi:kodi
+          - type: divider
+          - entity: media_player.ballroom_amplifier
+            name: Amplifier
+            icon: mdi:amplifier
 
   - title: Guest Room
     icon: mdi:bed-empty
@@ -567,17 +608,38 @@ views:
           - entity: sensor.eaton_battery_runtime
             name: UPS Runtime
 
-  - title: Multiroom Audio
+  - title: Multizone Audio
     icon: mdi:music
     cards:
       - type: vertical-stack
         cards:
-          - type: media-control
-            entity: media_player.mpd
-            name: Iris Media Player
-          - type: iframe
-            url: http://media.home.whalebarn.com:1780/
-            aspect_ratio: 100%
+          - title: Iris Players
+            type: entities
+            entities:
+              - entity: media_player.study_mpd
+                name: Study
+                icon: mdi:printer
+              - type: divider
+              - entity: media_player.kitchen_mpd
+                name: Kitchen
+                icon: mdi:stove
+              - type: divider
+              - entity: media_player.lounge_mpd
+                name: Lounge
+                icon: mdi:sofa
+              - type: divider
+              - entity: media_player.library_mpd
+                name: Library
+                icon: mdi:library
+              - type: divider
+              - entity: media_player.ballroom_mpd
+                name: Ballroom
+                icon: mdi:projector
+              - type: divider
+              - entity: media_player.outside_mpd
+                name: Outside
+                icon: mdi:pine-tree
+
           - type: horizontal-stack
             cards:
               - name: "Kitchen Amplifier"
