--- a/packages/dahua-cameras.yaml
+++ b/packages/dahua-cameras.yaml
@@ -7,6 +7,7 @@ amcrest:
     password: !secret camera0_password
     resolution: "low"
     scan_interval: 30
+    stream_source: rtsp
     binary_sensors:
       - motion_detected
     sensors:
