--- a/packages/study/media-dimming.yaml
+++ b/packages/study/media-dimming.yaml
@@ -4,16 +4,16 @@
 
 homeassistant:
   customize:
-    group.g_lounge_media_dimming:
+    group.g_study_media_dimming:
       icon: mdi:brightness-auto
-    input_boolean.lounge_dim_for_movie:
+    input_boolean.study_dim_for_movie:
       icon: mdi:movie
-    input_boolean.lounge_dim_for_tv:
+    input_boolean.study_dim_for_tv:
       icon: mdi:television-classic
-    input_number.lounge_media_dimmer_level:
+    input_number.study_media_dimmer_level:
       icon: mdi:brightness-6
 
-    package.lounge_media_dimming: &lounge_dim_condition
+    package.study_media_dimming: &study_dim_condition
       condition:
         condition: and
         conditions:
@@ -21,14 +21,14 @@ homeassistant:
             entity_id: sun.sun
             state: "below_horizon"
           - condition: state
-            entity_id: group.lounge_lights
+            entity_id: group.study_lights
             state: "on"
           - condition: or
             conditions:
               - condition: and
                 conditions:
                   - condition: state
-                    entity_id: input_boolean.lounge_dim_for_movie
+                    entity_id: input_boolean.study_dim_for_movie
                     state: "on"
                   - condition: template
                     value_template: >
@@ -36,69 +36,69 @@ homeassistant:
               - condition: and
                 conditions:
                   - condition: state
-                    entity_id: input_boolean.lounge_dim_for_tv
+                    entity_id: input_boolean.study_dim_for_tv
                     state: "on"
                   - condition: template
                     value_template: >
                       {{ trigger.to_state.attributes.media_content_type == "tvshow" }}
 
 group:
-  g_lounge_media_dimming:
+  g_study_media_dimming:
     name: Media Auto Dim
     entities:
-      - input_boolean.lounge_dim_for_movie
-      - input_boolean.lounge_dim_for_tv
-      - input_number.lounge_media_dimmer_level
+      - input_boolean.study_dim_for_movie
+      - input_boolean.study_dim_for_tv
+      - input_number.study_media_dimmer_level
 
 input_boolean:
-  lounge_dim_for_tv:
+  study_dim_for_tv:
     name: Dim during TV shows
-  lounge_dim_for_movie:
+  study_dim_for_movie:
     name: Dim during Movies
 
 input_number:
-  lounge_media_dimmer_level:
+  study_media_dimmer_level:
     name: "Dim Level"
     min: 0
     max: 40
     step: 5
 
 automation:
-  - alias: "Lounge Dim on Media Playing"
+  - alias: "Study Dim on Media Playing"
     trigger:
       - platform: state
-        entity_id: media_player.lounge_kodi
+        entity_id: media_player.study_kodi
         to: "playing"
         for:
           seconds: 2
-    <<: *lounge_dim_condition
+    <<: *study_dim_condition
     action:
       - service: light.turn_on
         data_template:
-          entity_id: group.lounge_lights
-          brightness_pct: "{{ states.input_number.lounge_media_dimmer_level.state | int }}"
+          entity_id: group.study_lights
+          brightness_pct: "{{ states.input_number.study_media_dimmer_level.state | int }}"
           transition: "2"
 
-  - alias: "Lounge Dim on Media Paused"
+  - alias: "Study Dim on Media Paused"
     trigger:
       - platform: state
-        entity_id: media_player.lounge_kodi
+        entity_id: media_player.study_kodi
         to: "paused"
-    <<: *lounge_dim_condition
+    <<: *study_dim_condition
     action:
       service: light.turn_on
       data:
-        entity_id: group.lounge_lights
+        entity_id: group.study_lights
         brightness_pct: "50"
         transition: "3"
 
-  - alias: "Lounge Dim on Media Stopped"
+  - alias: "Study Dim on Media Stopped"
     trigger:
       - platform: state
-        entity_id: media_player.lounge_kodi
+        entity_id: media_player.study_kodi
         from: "playing"
         to: "idle"
-    <<: *lounge_dim_condition
+    <<: *study_dim_condition
     action:
       service: scene.turn_on
-      entity_id: scene.lounge_bright
+      entity_id: scene.study_bright
