--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -311,6 +311,7 @@ views:
             name: "Current Temperature"
           - entity: binary_sensor.study_door_contact_access_control_door_window_open
             name: "Study Door"
+          - group.g_study_media_dimming
           - group.g_study_settings_ui
 
       - name: "Study Heat"
