Fixup scripts that reference old media_players

--- a/packages/dinner-time.yaml
+++ b/packages/dinner-time.yaml
@@ -53,9 +53,5 @@ group:
   dinner_announcers:
     name: Dinner Announcers
     entities:
-      - media_player.study
-      - media_player.lounge
-      - media_player.library
-      - media_player.ballroom
-      - media_player.bedroom_mark
+      - media_player.bedroom_mark_multizone_audio
 
