--- a/configuration.yaml
+++ b/configuration.yaml
@@ -166,7 +166,9 @@ sun:
 
 http:
   use_x_forwarded_for: true
-  trusted_proxies: 127.0.0.1
+  trusted_proxies:
+    - 127.0.0.1
+    - ::1
 
 mqtt:
   broker: !secret mqtt_broker
